Spacing fix

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -169,7 +169,7 @@ div.buttons {
 	color: var(--dark-green);
 	text-align: center;
 	margin: auto;
-	height: calc(1em + 1.75vh);
+	height: calc(1em + 1vh);
 }
 .poem-data {
 	margin: 1rem 0;
